k8s/pharmacy-namespace/pharmacy-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharmacy-service-ingress
  namespace: pharmacy
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: api.gindho.com
    http:
      paths:
      - path: /pharmacy
        pathType: Prefix
        backend:
          service:
            name: pharmacy-service
            port:
              number: 8091
